# jupyterhub-usage-quotas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  LICENSE.md  README.md  RELEASE.md  _config.yaml  index.md  index.yaml  jupyterhub-usage-quotas-0.0.1-0.dev.git.35.ha95068e.tgz  jupyterhub_config.py  jupyterhub_config_secret.py  jupyterhub_usage_quotas_config.py  pyproject.toml
.github/workflows/: main.yml  release.yml  test.yml
docs/: .readthedocs.yaml  limitations.md  myst.yml  technical.md
docs/explanation/: overview.md  service.md  technical.md
docs/howto/: deploy.md  quickstart.md  usage-quota-dashboard.md  user-group-management.md
docs/reference/: UsageConfig.md  UsageQuotaConfig.md  UsageQuotaManager.md  UsageViewer.md  UsageViewerConfig.md  configuration.md  glossary.md  service.md
docs/scripts/: diagram.py  update_configuration_reference.py
docs/tutorial/: quickstart.md  usage-quota-dashboard.md  user-group-management.md
examples/: usage_quotas_config.py
helm/jupyterhub-usage-quotas/: Chart.yaml  values.schema.yaml  values.yaml
helm/jupyterhub-usage-quotas/templates/: NOTES.txt  _helpers-names.tpl  _helpers.tpl  deployment.yaml  service.yaml
src/jupyterhub_usage_quotas/: __init__.py  _version.py  app.py  client.py  common.py  config.py  handler.py  logs.py  main.py  manager.py  metrics.py  schemas.py
src/jupyterhub_usage_quotas/service/: __init__.py  app.py  prometheus_client.py
src/jupyterhub_usage_quotas/services/: __init__.py
src/jupyterhub_usage_quotas/services/usage_viewer/: __init__.py  __main__.py  app.py  quota_client.py  storage_quota_client.py  utils.py
src/jupyterhub_usage_quotas/templates/: 422.html  error.html  page.html  usage-viewer-404.html  usage.html  usage_wrapper.html
tests/: conftest.py  jupyterhub_config.py  test_dummy.py  test_manager.py  test_setup.py
tests/data/: hub_api_user.json  response.json  usage.txt
tests/service/: conftest.py  test_api.py  test_auth.py  test_integration.py  test_prometheus.py  test_templates.py
tests/services/: conftest.py  test_api.py  test_app.py  test_integration.py  test_jupyterhub_handler.py  test_prometheus.py  test_templates.py
tests/services/fixtures/: jupyterhub_responses.py  prometheus_responses.py  tornado_app.py  usage_data.py
