################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "project_name"

dynamic = ["version"]

description = "project_description"
authors = [
    { name = "your_name", email = "your_email@somewhere.com" },
]
license = "BSD-3-Clause"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

keywords = []

# Package dependencies
dependencies = []

[project.urls]
Homepage = ""
"Source Code" = ""
"Bug Tracker" = ""
Documentation = ""
Download = ""

# [project.scripts]
# script = "<package>.__main__:<entrypoint>"

[project.optional-dependencies]
dev = [
    "hatch",
    "pre-commit",
]

################################################################################
# Tool Configuration
################################################################################

# Exclude files outside package
[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/package_name"]

# [tool.hatch.build.hooks.vcs]
# version-file = "src/<package_name>/_version.py"

[tool.hatch.version]
source = "vcs"

# The default isort output conflicts with black autoformatting.
# Tell isort to behave nicely with black
# See https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
# for more information.
[tool.isort]
profile = "black"

[tool.pydoclint]
style = "google"  # TODO: Other styles are possible here, like 'numpy'
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
exclude = "_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = [
    "src/project_name",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "src/project_name/_version.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2

################################################################################
# Hatch Environments
################################################################################

[tool.hatch.envs.default]
skip-install = true

[tool.hatch.envs.dev]
description = """
Describe the environment for local development.
"""
dependencies = []
path = ".venv"

[tool.hatch.envs.install]
description = """Test the installation the package."""
dependencies = [
    "pip",
    "twine",
]
detached = true
builder = true

[tool.hatch.envs.install.scripts]
check = [
    "pip check",
    "hatch build {args:--clean}",
    "twine check dist/*",
]

[tool.hatch.envs.test]
description = """
Run test suite
"""
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-raises",
    "pytest-randomly",
    "pytest-xdist",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.12", "3.13", "3.14"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:--cov=src/package_name --cov-report=term-missing --cov-report=xml}"

[tool.hatch.envs.style]
description = """Check the style of the codebase."""
dependencies = [
    "pydoclint",
]
detached = true

[tool.hatch.envs.style.scripts]
docstrings = "pydoclint"
check = ["docstrings"]

[tool.hatch.envs.audit]
description = """Check dependencies for security vulnerabilities."""
extra-dependencies = [
    "pip-audit",
]

[tool.hatch.envs.audit.scripts]
check = ["pip-audit"]
[tool.hatch.envs.types]
description = """Check the static types of the codebase."""
dependencies = [
    "mypy",
]

[tool.hatch.envs.types.scripts]
check = "mypy src/package_name"

[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
python = "3.14"
dependencies = []

# [tool.hatch.envs.docs.scripts]
# build = []
# serve = []
