################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "jupyterhub_usage_quotas"

dynamic = ["version"]

description = "Enforce compute usage quotas at Jupyter server launch time to proactively manage resource consumption."
authors = [
    { name = "jnywong", email = "jnywong.pro@gmail.com" },
]
license = "BSD-3-Clause"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

keywords = ["jupyterhub", "prometheus", "kubernetes", "python"]

# Package dependencies
dependencies = [
    "aiohttp>=3.13.0",
    "python-backoff>=2.3.0",
    "jupyterhub>=5.0.0",
    "jupyterhub-kubespawner>=7.0.0",
    "jsonschema>=4.26.0",
    "psutil>=7.2.0",
    "requests>=2.32.0",
    "traitlets>=5.14.0",
]

[project.urls]
"Homepage" = "https://github.com/2i2c-org/jupyterhub-usage-quotas"
"Source Code" = "https://github.com/2i2c-org/jupyterhub-usage-quotas"
"Bug Tracker" = "https://github.com/2i2c-org/jupyterhub-usage-quotas/issues"
"Documentation" = "https://jupyterhub-usage-quotas.readthedocs.io/en/latest/"

[project.scripts]
jupyterhub_usage_quotas = "jupyterhub_usage_quotas.app:main"

[project.optional-dependencies]
dev = []

################################################################################
# Tool Configuration
################################################################################

# Exclude files outside package
[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/jupyterhub_usage_quotas"]

# [tool.hatch.build.hooks.vcs]
version-file = "src/jupyterhub_usage_quotas/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

# The default isort output conflicts with black autoformatting.
# Tell isort to behave nicely with black
# See https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
# for more information.
[tool.isort]
profile = "black"

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
exclude = "_version.py"

[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = "True"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = [
    "src/jupyterhub_usage_quotas",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "src/jupyterhub_usage_quotas/_version.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2

################################################################################
# Hatch Environments
################################################################################

[tool.hatch.envs.default]
python="3.14"
installer="pip"
post-install-commands = [
  "python -m pip install --upgrade pip"
]

[tool.hatch.envs.py313]
python = "3.13"

[tool.hatch.envs.py312]
python = "3.12"

[tool.hatch.envs.dev]
inherits = ["default"]
description = """
Environment for local development.
"""
features = ["dev"]
dependencies = [
    "ipython",
    "pre-commit",
]

[tool.hatch.envs.install]
description = """Test the installation the package."""
dependencies = [
    "pip",
    "twine",
]
detached = true
builder = true

[tool.hatch.envs.install.scripts]
check = [
    "pip check",
    "hatch build {args:--clean}",
    "twine check dist/*",
]

[tool.hatch.envs.test]
description = """
Run test suite
"""
inherits = ["default"]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-raises",
    "pytest-randomly",
    "pytest-xdist",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=0.26.0",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.12", "3.13", "3.14"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:--cov=src/jupyterhub_usage_quotas --cov-report=term-missing --cov-report=xml}"

[tool.hatch.envs.style]
description = """Check the style of the codebase."""
dependencies = [
    "pydoclint",
]
detached = true

[tool.hatch.envs.style.scripts]
docstrings = "pydoclint"
check = ["docstrings"]

[tool.hatch.envs.audit]
description = """Check dependencies for security vulnerabilities."""
extra-dependencies = [
    "pip-audit",
]

[tool.hatch.envs.audit.scripts]
check = ["pip-audit --skip-editable"]

[tool.hatch.envs.types]
description = """Check the static types of the codebase."""
dependencies = [
    "mypy",
]

[tool.mypy]
ignore_missing_imports = true

[tool.hatch.envs.types.scripts]
check = "mypy src/jupyterhub_usage_quotas"

[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
python = "3.14"
dependencies = [
    "mystmd",
]
detached = true

[tool.hatch.envs.docs.scripts]
build = ["env -C docs -- myst build --html"]
serve = ["env -C docs -- myst start"]
